--- a/frontend/components/Main.module.scss
+++ b/frontend/components/Main.module.scss
@@ -47,6 +47,26 @@
 
 // How can we help
 
+.specials {
+  margin-top: 3rem;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+  h3 {
+    color: $dark-color;
+    padding-bottom: 0.4rem;
+  }
+  @include md {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include sm {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  @include xs {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 // Footer
 .footer {
   background: $dark-color;
@@ -59,5 +79,9 @@
     background: $main-color;
     display: block;
     margin: 0 auto 1rem auto;
+  }
+  a {
+    color: #fff;
+    font-weight: bold;
   }
 }
