--- a/frontend/scss/_config.scss
+++ b/frontend/scss/_config.scss
@@ -5,7 +5,7 @@ $secondary-color: #7660e1;
 $main-color: #0080fe;
 $light-color: #f4f4f4;
 $medium-color: #7198f5;
-$dark-color: #00008b;
+$dark-color: #10106d;
 $bg-image: url('../img/showcase.jpg');
 
 // Set Text Color
