--- a/frontend/components/Main.module.scss
+++ b/frontend/components/Main.module.scss
@@ -67,6 +67,37 @@
   }
 }
 
+// Contact
+.text-fields {
+  display: grid;
+  grid-template-areas:
+    'name email'
+    'subject phone'
+    'message message';
+  grid-gap: 1.2rem;
+  margin-bottom: 1.2rem;
+
+  // Grid Areas
+  .name-input {
+    grid-area: name;
+  }
+  .subject-input {
+    grid-area: subject;
+  }
+  .email-input {
+    grid-area: email;
+  }
+  .phone-input {
+    grid-area: phone;
+  }
+  .message-input {
+    grid-area: message;
+    height: 150px;
+  }
+  .text-input {
+    padding: 0.5rem 1rem;
+  }
+}
 // Footer
 .footer {
   background: $dark-color;
