--- a/frontend/components/Main.module.scss
+++ b/frontend/components/Main.module.scss
@@ -35,11 +35,10 @@
   border-bottom: 3px transparent solid;
   padding-bottom: 0.5rem;
   transition: border-color 0.5s;
-
+  color: $dark-color !important;
   &:hover {
     border-color: $medium-color;
   }
-
   &.current {
     border-color: $main-color;
   }
