--- a/frontend/scss/_utilities.scss
+++ b/frontend/scss/_utilities.scss
@@ -106,7 +106,7 @@
   padding-bottom: 0.5rem;
   text-align: center;
   font-weight: 100;
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 
 .bottom-line {
